Cambios de autenticación

--- a/TesterBlazor/Components/Pages/InstagramTester.razor
+++ b/TesterBlazor/Components/Pages/InstagramTester.razor
@@ -1,5 +1,5 @@
 ﻿@page "/instagram"
-<DynamicAuthorize Ruta="/instagram" />
+<DynamicAuthorize Ruta="instagram" />
 
 @inject SessionState Session
 
