--- a/TesterBlazor/Components/Pages/ModalesGenericos/ModalVolverLogin.razor
+++ b/TesterBlazor/Components/Pages/ModalesGenericos/ModalVolverLogin.razor
@@ -2,7 +2,7 @@
 @inject IJSRuntime JSRuntime
 
 <div class="modal fade" id="unauthorized" tabindex="-1" role="dialog" aria-labelledby="unauthorizedLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered align-items-center" role="document" style="max-width:340px; max-height:200px;">
+    <div class="modal-dialog modal-dialog-short modal-dialog-centered align-items-center" role="document">
         <div class="modal-content border-danger shadow-lg" style="min-height:unset;">
             <div class="modal-header bg-danger text-white py-1" style="min-height:unset;">
                 <h5 class="modal-title" id="unauthorizedLabel" style="font-size:1.1rem;">
