--- a/TesterBlazor/Components/Pages/TelegramTester.razor
+++ b/TesterBlazor/Components/Pages/TelegramTester.razor
@@ -4,7 +4,7 @@
 
 @page "/telegram"
 
-<DynamicAuthorize Ruta="/telegram" />
+<DynamicAuthorize Ruta="telegram" />
 <PageTitle>Tester de Telegram</PageTitle>
 
 <h2> 🤖 Tester de Telegram</h2>
