--- a/TesterBlazor/Components/Pages/BugReport.razor
+++ b/TesterBlazor/Components/Pages/BugReport.razor
@@ -1,6 +1,6 @@
 ﻿@inject IJSRuntime JSRuntime
 @inject IUtils Utils
-<DynamicAuthorize Ruta="/bugreport" />
+<DynamicAuthorize Ruta="bugreport" />
 @page "/bugreport"
 
 <PageTitle>Reporte de errores</PageTitle>
