--- a/TesterBlazor/Components/Landing.razor
+++ b/TesterBlazor/Components/Landing.razor
@@ -384,7 +384,7 @@
                         <h6 class="card-title mbr-fonts-style mb-1 display-5">
                             <strong>Correo electrónico</strong>
                         </h6>
-                        <p class="mbr-text mbr-fonts-style display-7"><a href="mailto:ramirogm44@gmail.com" class="text-primary" target="_blank">ramirogm44@gmail.com</a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
+                        <p class="mbr-text mbr-fonts-style display-7"><a href="mailto:ramirogm44@gmail.com" class="text-primary" target="_blank">ramirogm44@gmail.com</a></p> /  <p class="mbr-text mbr-fonts-style display-7"><a href="mailto:info@memitosoftware.com" class="text-primary" target="_blank">info@memitosoftware.com</a></p> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                     </div>
                 </div>
             </div>
